--- a/Pathfinding algorithms - Interactive representation.vcxproj
+++ b/Pathfinding algorithms - Interactive representation.vcxproj
@@ -71,8 +71,8 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\Users\i29850\OneDrive - Verisk Analytics\Documents\VS Projects\SDL\SDL2_ttf-2.0.15\include;C:\Users\i29850\OneDrive - Verisk Analytics\Documents\VS Projects\SDL\SDL2_image-2.0.5\include;C:\Users\i29850\OneDrive - Verisk Analytics\Documents\VS Projects\SDL\SDL_2.0\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\i29850\OneDrive - Verisk Analytics\Documents\VS Projects\SDL\SDL2_ttf-2.0.15\lib\x86;C:\Users\i29850\OneDrive - Verisk Analytics\Documents\VS Projects\SDL\SDL2_image-2.0.5\lib\x86;C:\Users\i29850\OneDrive - Verisk Analytics\Documents\VS Projects\SDL\SDL_2.0\lib\x86;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(ProjectDir)SDL\SDL_2.0\include;$(ProjectDir)SDL\SDL2_ttf-2.0.15\include;$(ProjectDir)SDL\SDL2_image-2.0.5\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(ProjectDir)SDL\SDL2_ttf-2.0.15\lib\x86;$(ProjectDir)SDL\SDL2_image-2.0.5\lib\x86;$(ProjectDir)SDL\SDL_2.0\lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
@@ -157,7 +157,6 @@
     <ClCompile Include="Node.cpp" />
     <ClCompile Include="NodesMap.cpp" />
     <ClCompile Include="PopUpWindow.cpp" />
-    <ClCompile Include="RecursiveDivision.cpp" />
     <ClCompile Include="RenderManager.cpp" />
     <ClCompile Include="ResourceInitializer.cpp" />
   </ItemGroup>
@@ -170,18 +169,14 @@
     <ClInclude Include="InfoComponent.h" />
     <ClInclude Include="InputManager.h" />
     <ClInclude Include="MainWindow.h" />
-    <ClInclude Include="MazeAlgorithm.h" />
     <ClInclude Include="Node.h" />
     <ClInclude Include="NodesMap.h" />
-    <ClInclude Include="OrientationDefines.h" />
     <ClInclude Include="PathAlgorithm.h" />
     <ClInclude Include="PhaseDefines.h" />
     <ClInclude Include="PopUpWindow.h" />
-    <ClInclude Include="RecursiveDivision.h" />
     <ClInclude Include="RenderManager.h" />
     <ClInclude Include="ResourceInitializer.h" />
     <ClInclude Include="StateDefines.h" />
-    <ClInclude Include="WindowType.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
